# hd2AiNews

./: .env.example  .gitignore  README.md  pyproject.toml
hd2ainews/: main.py
hd2ainews/src/: aiscript.py  hd2.py  structures.py
